kubernetes/nginx/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: pwe-nginx
  name: pwe-nginx
  namespace: pwe
spec:
  selector:
    matchLabels:
      app: pwe-nginx
  template:
    metadata:
      labels:
        app: pwe-nginx
    spec:
      containers:
      - image: kukam/pwe-nginx:latest
        imagePullPolicy: Always
        name: pwe-nginx
        ports:
        - containerPort: 80
          name: pwe-nginx
