kubernetes/nginx/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pwe-nginx-svc
  namespace: pwe
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pwe-nginx
